--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: RDP
 
 on:
@@ -40,9 +39,23 @@ jobs:
               exit 1
           }
           
+          # Remove user if it already exists
+          $existingUser = Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue
+          if ($existingUser) {
+              Remove-LocalUser -Name "RDP"
+              Write-Host "Removed existing RDP user"
+          }
+          
           # Create user with the fixed password
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-          New-LocalUser -Name "RDP" -Password $securePass -PasswordNeverExpires:$true -AccountNeverExpires
+          try {
+              New-LocalUser -Name "RDP" -Password $securePass -PasswordNeverExpires -AccountNeverExpires -ErrorAction Stop
+              Write-Host "RDP user created successfully"
+          } catch {
+              Write-Error "Failed to create user: $_"
+              exit 1
+          }
+          
           Add-LocalGroupMember -Group "Administrators" -Member "RDP"
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
           
