--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,37 +29,28 @@ jobs:
           # (Optional) Restart the Remote Desktop service to ensure changes take effect
           Restart-Service -Name TermService -Force
 
-      - name: Create RDP User with Fixed Password
+      - name: Create RDP User with Secure Password
         run: |
-          # Use a fixed password stored in GitHub Secrets
-          $password = "${{ secrets.RDP_PASSWORD }}"
-          
-          if ([string]::IsNullOrEmpty($password)) {
-              Write-Error "RDP_PASSWORD secret is not set. Please add it to your repository secrets."
-              exit 1
+          Add-Type -AssemblyName System.Security
+          $charSet = @{
+              Upper   = [char[]](65..90)      # A-Z
+              Lower   = [char[]](97..122)     # a-z
+              Number  = [char[]](48..57)      # 0-9
+              Special = ([char[]](33..47) + [char[]](58..64) +
+                         [char[]](91..96) + [char[]](123..126)) # Special characters
           }
-          
-          # Remove user if it already exists
-          $existingUser = Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue
-          if ($existingUser) {
-              Remove-LocalUser -Name "RDP"
-              Write-Host "Removed existing RDP user"
-          }
-          
-          # Create user with the fixed password
+          $rawPassword = @()
+          $rawPassword += $charSet.Upper | Get-Random -Count 4
+          $rawPassword += $charSet.Lower | Get-Random -Count 4
+          $rawPassword += $charSet.Number | Get-Random -Count 4
+          $rawPassword += $charSet.Special | Get-Random -Count 4
+          $password = -join ($rawPassword | Sort-Object { Get-Random })
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-          try {
-              New-LocalUser -Name "RDP" -Password $securePass -PasswordNeverExpires -AccountNeverExpires -ErrorAction Stop
-              Write-Host "RDP user created successfully"
-          } catch {
-              Write-Error "Failed to create user: $_"
-              exit 1
-          }
-          
+          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
           Add-LocalGroupMember -Group "Administrators" -Member "RDP"
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
           
-          echo "RDP_CREDS=User: RDP | Password: (stored in secrets)" >> $env:GITHUB_ENV
+          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
           
           if (-not (Get-LocalUser -Name "RDP")) {
               Write-Error "User creation failed"
@@ -112,7 +103,7 @@ jobs:
           Write-Host "`n=== RDP ACCESS ==="
           Write-Host "Address: $env:TAILSCALE_IP"
           Write-Host "Username: RDP"
-          Write-Host "Password: (Use the password stored in your GitHub secrets)"
+          Write-Host "Password: $(echo $env:RDP_CREDS)"
           Write-Host "==================`n"
           
           # Keep runner active indefinitely (or until manually cancelled)
